# motomail

rust/motomail/: Cargo.toml
rust/motomail/src/: main.rs
